--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.16.2",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.15.5",
     "nodemailer": "^4.1.1",
     "react": "^15.6.1",
+    "react-async-script": "^0.9.1",
     "react-dom": "^15.6.1",
     "react-fontawesome": "^1.6.1",
+    "react-google-recaptcha": "^0.9.7",
+    "react-modal": "^2.3.2",
     "react-scripts": "1.0.13"
   },
   "scripts": {
